...

            <LinearLayout
                android:id="@+id/gpText"
                android:layout_marginLeft="2sp"
                android:layout_marginRight="2sp"
...
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/gpServiceDate"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"
...

                    <ImageButton
                        android:id="@+id/Date_Picker_Button"
                        android:layout_marginLeft="10sp"
                        android:layout_width="35sp"
...
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/gpDrawback"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"
...
                        android:textColor="@color/text_color"/>
                    <org.sci.rhis.fwc.MultiSelectionSpinner
                        android:id="@+id/gpSymptomSpinner"
                        android:inputType="text"
                        android:textSize="20sp"
...
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/gpPhysicalExamination"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"
...

                    <LinearLayout
                        android:id="@+id/gpWeight"
                        android:layout_marginLeft="5sp"
                        android:layout_marginRight="5sp"
...
                            android:layout_gravity="center_horizontal" />
                        <EditText
                            android:id="@+id/gpWeightValue"
                            android:inputType="numberDecimal"
                            android:textSize="20sp"
...
                        android:background="@drawable/gradient_spinner" />
                </LinearLayout>-->
                <LinearLayout android:id="@+id/gpDisease" android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"
                    android:layout_marginTop="5sp"
...
                        android:textColor="@color/text_color"/>
                    <org.sci.rhis.fwc.MultiSelectionSpinner
                        android:id="@+id/gpDiseaseSpinner"
                        android:inputType="text"
                        android:textSize="20sp"
...
                        android:background="@drawable/gradient_spinner" />
                </LinearLayout>
                <LinearLayout android:id="@+id/gpTreatment" android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"
                    android:layout_marginTop="5sp"
...
                    <!--app:quantifiable="true"-->
                    <org.sci.rhis.fwc.MultiSelectionSpinner
                        android:id="@+id/gpTreatmentSpinner"
                        android:inputType="text"
                        android:textSize="20sp"
...
                        android:visibility="invisible"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/gpButton" android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"
                    android:layout_marginTop="5sp"
...
                    android:background="@drawable/layoutbordersimple">
                    <Button
                        android:id="@+id/gpSaveButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Save"
                        android:textSize="18sp"
                        android:onClick="onClick"
...
