<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="1sp"
    android:id = "@+id/adv_search_layout"
    android:background="@drawable/fragmentborder"
    android:orientation="vertical"
    tools:context=".ADVSearchActivity">

    <LinearLayout
        android:id="@+id/mobileSearchMainLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">

        <LinearLayout
...
                android:layout_width="fill_parent"
                android:textColor="#FFFFFF"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/mobile_layout"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginTop="5sp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
            <EditText
                android:layout_marginTop="10sp"
                android:textSize="20dp"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_round"
                android:id="@+id/search_et_mobile_no"
                android:paddingLeft="2sp"
                android:inputType="number"
                android:digits="0123456789"
                android:ems="10"
                android:maxLength="11"
                android:maxLines="1"/>
...
        </LinearLayout>

    </LinearLayout><!--
    </HorizontalScrollView>-->

    <LinearLayout
        android:id="@+id/search_button_layout"
        android:layout_marginTop="5sp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layoutbordersimple"
        android:gravity="center">


        <Button
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/advSearchBtn"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:ellipsize="start"
            android:drawableLeft="@android:drawable/ic_menu_search"
            android:background="@drawable/button_style"
            android:text="SEARCH"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancelBtn"
            android:paddingRight="10dp"
...
        android:layout_height="match_parent">
        <ListView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linear_layout_addable_new_client"
            android:layout_alignParentTop="true"
            android:id="@+id/search_result"/>

        <LinearLayout
            android:id="@+id/linear_layout_addable_new_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
...
