...
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginBottom="3dp">

                <Spinner
                    android:id="@+id/ClientsIdentityDropdown"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:drawSelectorOnTop="true"
                    android:layout_weight="2"
                    android:background="@drawable/gradient_spinner"
                    android:layout_gravity="right|top" />
...

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">
            <TableLayout
                android:id="@+id/serviceHeaderLayout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="10sp"
                style="@style/rowStyle0"
                android:background="@drawable/fragmentborder"
                android:visibility="gone">
                <TableRow
                    android:id="@+id/Type_tableRow1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:text="@string/MNCHservice"
                        android:layout_margin="2sp"
                        android:layout_width="wrap_content"
...
                        android:layout_width="wrap_content"
                        android:layout_height="30sp"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:padding="3dp"
                        android:background="@drawable/button_style"
                        android:id="@+id/GPButton"
                        android:onClick="startGeneralPatient"/>

                    <Button
                        android:id="@+id/zerototwomonthButton"
                        android:layout_margin="2sp"
                        android:layout_width="wrap_content"
...
