...
    <string name = "providerPassHint">"Union Health &#38; Family Planning Info Registration"</string>
    <string name = "ClientsIntroFragment">"Client&#39;s Detail"</string>
    <string name = "ProviderPlaceTittle">"Service Place"</string>
    <string name = "ProviderPlaceTip">"Select service location type of today:"</string>
    <string name = "PlaceFacility">Union Health &#38; Family Planning Center</string>
    <string name = "PlaceSatellite">Satellite Clinic</string>
    <string name = "title_confirmation">"Confirm"</string>
    <string name = "ClientsName">"Name "</string>
    <string name = "ClientsNameHint">"Client Name"</string>
    <string name = "ClientsAge">"Age "</string>
    <string name = "ClientsHusband">"Spouse "</string>
    <string name = "ClientsFather">"Father&#39;s Name"</string>
    <string name = "ClientsMother">"Mother&#39;s Name"</string>
...
    <string name="str_correct_fp_method_selection">"গ্রহীতার জন্য উপযুক্ত পদ্ধতি সমূহ সম্পর্কে নির্ভুল তথ্য প্রদান করে আলাপ-আলোচনার মাধ্যমে গ্রহীতার পছন্দসই ও সঠিক পদ্ধতি"</string>
    <string name="str_refer_properly">"গ্রহীতাকে উপযুক্ত স্বাস্থ্যকেন্দ্রে রেফার করুন ।"</string>

    <string name="temp_celsius"> &#176;সে</string>
    <string name="temp_celsius_entry"> &#176;সে এন্ট্রি</string>
    <string name="satellite_months_selection">Select months to submit</string>
    <string name="str_ok">OK</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_reset">Reset</string>


    <!-- Satellite Session Planning-->
    <string-array name="month">
...
    <string name="childcaresymptom8">মাথার তালু স্ফীত</string>
    <string name="childcaresymptom9">শিশুর শরীরে বিশেষ অংশ নীল বর্ণ ধারণ করেছে</string>
    <string name="childcaresymptom10">গুরুতর জন্মগত বিকলঙ্গতা</string>
    <string name="childcaresymptom11">অধিক রক্তপাত/ সার্জিক্যাল কন্ডিশনের জন্য হাসপাতালে ভর্তি প্রয়োজন</string>

    <string name="childcaresymptom12">বুকের নিচের অংশ মারাত্মকভাবে দেবে যাওয়া</string>
    <string name="childcaresymptom13">জ্বর (১০০.৪&#176;ফা/৩৮&#176;সেন্টি বা বেশি)</string>
    <string name="childcaresymptom14">শরীরে অল্প তাপমাত্রা (৯৫.৫&#176; ফা বা ৩৫.৮&#176; সেন্টি কম)</string>
    <string name="childcaresymptom15">শুধুমাত্র উত্তেজিত করলে নড়াচড়া করে </string>
    <string name="childcaresymptom16">একেবারেই নড়াচড়া করে না</string>
    <string name="childcaresymptom104">খেতে অসুবিধা হচ্ছে</string>

    <string name="childcaresymptom17">শ্বাসের হার মিনিটে ৬০ বা তার বেশি (০ থেকে ৬ দিন বয়সের জন্য)</string>
...
